syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

service AuthService {
  rpc Signup(SignupRequest) returns (AuthResponse);
  rpc Signin(SigninRequest) returns (AuthResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string usermame = 3;
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string fingerprint = 3;
}

message RefreshRequest {
  string refresh_token = 1;
  string fingerprint = 2;
}

message RefreshResponse {
  string access_token = 1;
}

message VerifyEmailRequest {
  string token = 1;
}
message VerifyEmailResponse {
  string token = 1;
}
